--- a/social-media-angular-main/src/app/components/comment/comment.component.html
+++ b/social-media-angular-main/src/app/components/comment/comment.component.html
@@ -1,6 +1,7 @@
 <p>
     {{inputComment.text}}
 </p>
+<button *ngIf="currentUser.id == inputComment.author.id" mat-raised-button color="warn" (click)="deleteComment()">Delete</button>
 <div class="comment-reply" align="right">
     <div class="comment-reply-text" (click)="toggleReplyToComment()">
         reply
