Added change password functionality fix bugs

--- a/social-media-angular-main/src/app/components/user-card/user-card.component.html
+++ b/social-media-angular-main/src/app/components/user-card/user-card.component.html
@@ -2,10 +2,10 @@
     <div class="user-circle"></div>
     <mat-divider></mat-divider>
     <p style="padding-top: 1em; font-weight: bold;">
-        {{user.firstName}} {{user.lastName}}
+        {{firstName}} {{lastName}}
     </p>
     <p>
-        {{user.email}}
+        {{email}}
     </p>
-    
+    <a href="/password-change"> <button class = lgnbuttons>Change Password</button></a>
 </mat-card>
