Front & Backend updates

--- a/social-media-angular-main/src/app/components/navbar/navbar.component.html
+++ b/social-media-angular-main/src/app/components/navbar/navbar.component.html
@@ -2,6 +2,8 @@
     <mat-toolbar>
         <span [routerLink]="['/post-feed']">Revature Social Media</span>
         <span class="spacer"></span>
+        <button mat-button (click)="posts();">Post Feed</button>
+        <button mat-button (click)="profile();">Profile</button>
         <button mat-button (click)="logout();">Logout</button>
     </mat-toolbar>
 </p>
