--- a/social-media-angular-main/src/app/components/about-me/about-me.component.html
+++ b/social-media-angular-main/src/app/components/about-me/about-me.component.html
@@ -1,6 +1,10 @@
-
+{{myInfo}}
+<div *ngIf="submitted == false">
+<form [formGroup]="aboutMe" (ngSubmit)="onSubmit()">
 <mat-form-field class="full-width" appearance="fill">
     <mat-label>Introduce Yourself!</mat-label>
-    <textarea matInput autofocus formControlName="text"></textarea>
+    <textarea matInput autofocus formControlName="aboutMe" required></textarea>
 </mat-form-field>
-<button mat-raised-button color="primary" (click)="submitInfo">Submit</button>
+</form>
+<button mat-raised-button color="primary" (click)="onSubmit()">Submit</button>
+</div>
