--- a/social-media-angular-main/src/app/components/my-details/my-details.component.html
+++ b/social-media-angular-main/src/app/components/my-details/my-details.component.html
@@ -1,1 +1,14 @@
-<p>my-details works!</p>
+<div id = "detailsDiv">
+    <div id = "identifier">
+        <p>Email Address:</p>
+        <p>Password:</p>
+        <p>First Name:</p>
+        <p>Last Name:</p>
+    </div>
+    <div id = "userInfo">
+        <p>{{user.email}}</p>
+        <p>XXXXXXXXXX</p>
+        <p>{{user.firstName}}</p>
+        <p>{{user.lastName}}</p>
+    </div>
+</div>
