--- a/social-media-angular-main/src/app/components/post/post.component.html
+++ b/social-media-angular-main/src/app/components/post/post.component.html
@@ -23,7 +23,8 @@
 				class="comment-container"
 			>
 				<mat-divider></mat-divider>
-				<app-comment [comment]="comment" [currentUser]="currentUser" (deleteCommentEvent)="refreshPosts($event)"></app-comment>
+				<app-comment [comment]="comment" [currentUser]="currentUser"
+				(deleteCommentEvent)="refreshPosts($event)" (commentEventEmitter)="refreshPosts($event)"></app-comment>
 			</div>
 		</mat-card-content>
 		<mat-card-actions align="end">
