--- a/social-media-angular-main/src/app/components/password-change/password-change.component.html
+++ b/social-media-angular-main/src/app/components/password-change/password-change.component.html
@@ -1,43 +1,74 @@
-<div class = "logintext">
-    <div class="example-container">
-     
-      <div class = "inner">
-        <img src="assets/ChangePassword.png">
-      
-      <form [formGroup]="empLogin" (ngSubmit)="onSubmit()">
-        <mat-form-field class = "ff2" appearance="fill" floatLabel="always" >
-          <mat-label class = "label">Current Password</mat-label>
-          
-          <input id="oldPass" class = "fields" required matInput [type]="hide ? 'password' : 'text'" formControlName="oldPass">
-          
-          <button type="button" class = "eyebtn" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-            <mat-icon class = "eyebtn" >{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-          </button>
-          <mat-error *ngIf="empLogin.controls['oldPass'].errors?.['required']">Password is Required</mat-error>
-        </mat-form-field>
-      
-          
-        
-    
-        <mat-form-field class = "ff2" appearance="fill" floatLabel="always" >
-          <mat-label class = "label">New Password</mat-label>
-          
-          <input id="newPass" class = "fields" required matInput [type]="hide ? 'password' : 'text'" formControlName="newPass">
-          
-          <button type="button" class = "eyebtn" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-            <mat-icon class = "eyebtn" >{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-          </button>
-          <mat-error *ngIf="empLogin.controls['newPass'].errors?.['required']">Password is Required</mat-error>
-          <mat-error *ngIf="empLogin.controls['newPass'].errors?.['minlength']">Password must be at least 10 characters</mat-error>
-        </mat-form-field>
-        
-        <div class = "subbutton">
-        <button button-type="button" ng-click="onSubmit()">Submit</button>
+<div id="mainDiv">
+  <div class="logintext">
+    <form [formGroup]="empLogin" (ngSubmit)="onSubmit()">
+      <mat-form-field class="ff2" appearance="fill" floatLabel="always">
+        <mat-label class="label">Current Password</mat-label>
+  
+        <input
+          id="oldPass"
+          class="fields"
+          required
+          matInput
+          [type]="hide ? 'password' : 'text'"
+          formControlName="oldPass"
+        />
+  
+        <button
+          type="button"
+          class="eyebtn"
+          mat-icon-button
+          matSuffix
+          (click)="hide = !hide"
+          [attr.aria-label]="'Hide password'"
+          [attr.aria-pressed]="hide"
+        >
+          <mat-icon class="eyebtn">{{
+            hide ? "visibility_off" : "visibility"
+          }}</mat-icon>
+        </button>
+        <mat-error *ngIf="empLogin.controls['oldPass'].errors?.['required']"
+          >Password is Required</mat-error
+        >
+      </mat-form-field>
+  
+      <mat-form-field class="ff2" appearance="fill" floatLabel="always">
+        <mat-label class="label">New Password</mat-label>
+  
+        <input
+          id="newPass"
+          class="fields"
+          required
+          matInput
+          [type]="hide ? 'password' : 'text'"
+          formControlName="newPass"
+        />
+  
+        <button
+          type="button"
+          class="eyebtn"
+          mat-icon-button
+          matSuffix
+          (click)="hide = !hide"
+          [attr.aria-label]="'Hide password'"
+          [attr.aria-pressed]="hide"
+        >
+          <mat-icon class="eyebtn">{{
+            hide ? "visibility_off" : "visibility"
+          }}</mat-icon>
+        </button>
+        <mat-error *ngIf="empLogin.controls['newPass'].errors?.['required']"
+          >Password is Required</mat-error
+        >
+        <mat-error
+          *ngIf="empLogin.controls['newPass'].errors?.['minlength']"
+          >Password must be at least 10 characters</mat-error
+        >
+      </mat-form-field>
+  
+      <div class="subbutton">
+        <button class="btn btn-warning"  type="button" color="accent" ng-click="onSubmit()">Submit</button>
       </div>
-      </form>
+    </form>
+  </div>
+</div>
 
-      
-    </div>
-    </div>
-    
-      </div>
