--- a/social-media-angular-main/src/app/components/my-details/my-details.component.css
+++ b/social-media-angular-main/src/app/components/my-details/my-details.component.css
@@ -3,4 +3,7 @@
     flex-direction: row;
     justify-content: space-around;
     padding: 10px;
+    margin-top: 15px;
+    background-color: white;
+    border-radius: 20px;
 }
