--- a/social-media-angular-main/src/app/components/password-change/password-change.component.css
+++ b/social-media-angular-main/src/app/components/password-change/password-change.component.css
@@ -1,30 +1,25 @@
-  
-  .ff1 {
-    
-    width: 250px;
-  
-  
-  }
-  .ff2 {
-    
-    width: 250px;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 10px;
-    padding-bottom:0px;
-    
-  }
 
   .logintext{
-    color: white;
-    background-color: rgb(47,47,60);
-    width: 500px;
-    height: 400px;
+    display:flex;
+    flex-direction: column;
+    
+    background-color: #475B63;
+    width: fit-content;
+    height: fit-content;
     margin: auto;
-    border-style: solid;
-    border-color: white;
-    border-radius: 20%;
+    border-radius: 20px;
+    padding: 20px 20px;
   }
+  
+  mat-form-field {
+    display:flex;
+    flex-direction: column;
+  }
+  
+  #mainDiv{
+    padding-top: 100px;
+  }
+  
   .inner{
     color:white;
     text-align: center;
