--- a/social-media-angular-main/src/app/components/profile/profile.component.html
+++ b/social-media-angular-main/src/app/components/profile/profile.component.html
@@ -1,18 +1,16 @@
 <app-navbar></app-navbar>
-<div class = "profile">
-<div class="card">
-    <app-user-card></app-user-card>
-</div>
+<div class="profile">
+	<div class="card">
+		<app-user-card></app-user-card>
+	</div>
 
-<!-- <div class = "profilepic">
-<img src="/assets/images/blankphoto.png" width="350 px" style="margin:auto">
-</div> -->
-<div class = "tabs">
-<mat-tab-group>
-    <mat-tab label="About Me"> <app-about-me></app-about-me> </mat-tab>
-    <mat-tab label="My Details"> <app-my-details></app-my-details> </mat-tab>
-    <mat-tab label="My Pets"> <app-pets></app-pets> </mat-tab>
-    
-  </mat-tab-group>
-</div>
+	<div class="tabs">
+		<mat-tab-group>
+			<mat-tab label="About Me"> <app-about-me></app-about-me> </mat-tab>
+			<mat-tab label="My Details">
+				<app-my-details></app-my-details>
+			</mat-tab>
+			<mat-tab label="My Pets"> <app-pets></app-pets> </mat-tab>
+		</mat-tab-group>
+	</div>
 </div>
