--- a/social-media-angular-main/src/app/components/login/login.component.html
+++ b/social-media-angular-main/src/app/components/login/login.component.html
@@ -26,6 +26,7 @@
 						/>
 					</mat-form-field>
 				</mat-card-content>
+				<p *ngIf="errorMessage" id="errorMessage">{{ errorMessage }}</p>
 				<button
 					mat-stroked-button
 					color="accent"
