--- a/social-media-angular-main/src/app/components/register/register.component.css
+++ b/social-media-angular-main/src/app/components/register/register.component.css
@@ -1,11 +1,15 @@
-.login-container{
-    height: fit-content;
-    margin-top: 100px;
+.login-container {
+	height: fit-content;
+	margin-top: 100px;
 }
 
-#mainDiv{
-    width:100%;
-    height:100%;
-    display: flex;
-    justify-content: center;
+#mainDiv {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+}
+
+#errorMessage {
+	color: red;
 }
