Added Change Password button to my details page

--- a/social-media-angular-main/src/app/components/my-details/my-details.component.html
+++ b/social-media-angular-main/src/app/components/my-details/my-details.component.html
@@ -11,4 +11,8 @@
         <p>{{user.firstName}}</p>
         <p>{{user.lastName}}</p>
     </div>
+    
+</div>
+<div class="passbutton">
+<a href="/password-change"> <button mat-raised-button color="primary">Change Password</button></a>
 </div>
