fixed issues with password change, about me info, post/comment reloading

--- a/social-media-angular-main/src/app/components/about-me/about-me.component.html
+++ b/social-media-angular-main/src/app/components/about-me/about-me.component.html
@@ -1,11 +1,11 @@
-<div id="info-display">
+<div *ngIf="myInfo" id="info-display">
 	<p>
 		{{ myInfo }}
 	</p>
 </div>
 
 <div *ngIf="submitted == false">
-	<form [formGroup]="aboutMe" (ngSubmit)="onSubmit()">
+	<form [formGroup]="aboutMe">
 		<mat-form-field class="full-width" appearance="fill">
 			<mat-label>Introduce Yourself!</mat-label>
 			<textarea
