Added Edit Button with funtionality

--- a/social-media-angular-main/src/app/components/about-me/about-me.component.html
+++ b/social-media-angular-main/src/app/components/about-me/about-me.component.html
@@ -4,8 +4,8 @@
 	</p>
 </div>
 
-<div *ngIf="submitted == false">
-	<form [formGroup]="aboutMe">
+<div >
+	<form [formGroup]="aboutMe" *ngIf="submitted == false">
 		<mat-form-field class="full-width" appearance="fill">
 			<mat-label>Introduce Yourself!</mat-label>
 			<textarea
@@ -16,7 +16,16 @@
 			></textarea>
 		</mat-form-field>
 	</form>
-	<button mat-raised-button color="primary" (click)="onSubmit()">
-		Submit
-	</button>
+	
+	<div id ="aboutMe-buttonContainer">
+		<button *ngIf="submitted == false" mat-raised-button color="primary" (click)="onSubmit()">
+			Submit
+		</button>
+	
+		<button *ngIf="submitted == true" mat-raised-button color="primary" (click)="onEdit()">
+			Edit
+		</button>
+
+	</div>
+	
 </div>
