--- a/social-media-angular-main/src/app/components/comment/comment.component.html
+++ b/social-media-angular-main/src/app/components/comment/comment.component.html
@@ -1,8 +1,27 @@
-<p>
-    {{inputComment.text}}
-</p> 
 
-<button *ngIf="currentUser.id == inputComment.author.id" mat-raised-button color="warn" (click)="deleteComment(inputComment)" >Delete</button>
+<mat-card class="example-card" *ngIf="inputComment.author">
+
+    <div *ngIf="currentUser.id == inputComment.author.id" id="close-icon-containter">
+      <mat-icon id="close-icon" color="warn" (click)="deleteComment(inputComment)" >close</mat-icon>
+    </div>
+  
+    <mat-card-header>
+        <img mat-card-avatar src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png" >
+        <mat-card-title >{{inputComment.author.firstName}} {{inputComment.author.lastName}}</mat-card-title>
+        <mat-card-subtitle >{{inputComment.author.email}}</mat-card-subtitle>
+  
+    </mat-card-header>
+    <mat-card-content id="textSection">
+      <p>
+        {{inputComment.text}}
+      </p>
+  
+    </mat-card-content>
+  </mat-card>
+
+ 
+
+<!-- <button *ngIf="currentUser.id == inputComment.author.id" mat-raised-button color="warn" (click)="deleteComment(inputComment)" >Delete</button> -->
 
 <div class="comment-reply" align="right">
 
