cannot read properties id console error Fix

--- a/social-media-angular-main/src/app/components/post/post.component.html
+++ b/social-media-angular-main/src/app/components/post/post.component.html
@@ -28,7 +28,7 @@
 			</div>
 		</mat-card-content>
 		<mat-card-actions align="end">
-			<button *ngIf="post.author.id === currentUser.id" mat-raised-button color="warn" (click)="deletePost(post)">
+			<button *ngIf="post?.author?.id === currentUser?.id" mat-raised-button color="warn" (click)="deletePost(post)">
 				Delete
 			</button>
 			<button
