--- a/social-media-angular-main/src/app/components/comment/comment.component.html
+++ b/social-media-angular-main/src/app/components/comment/comment.component.html
@@ -1,6 +1,6 @@
 <mat-card class="example-card" *ngIf="inputComment.author">
 
-    <div *ngIf="currentUser.id == inputComment.author.id" id="close-icon-containter">
+    <div *ngIf="currentUser?.id == inputComment?.author?.id" id="close-icon-containter">
       <mat-icon id="close-icon" color="warn" (click)="deleteComment(inputComment)" >close</mat-icon>
     </div>
   
@@ -26,7 +26,7 @@
     *ngIf="inputComment">
         reply
     </div>
-    <div *ngIf=" (currentUser.id == inputComment.author.id) && (inputComment)" class="edit-reply-text" (click)="toggleEditPost()"  >
+    <div *ngIf=" (currentUser?.id == inputComment?.author?.id) && (inputComment)" class="edit-reply-text" (click)="toggleEditPost()"  >
         edit
     </div>
 
