added sorting for posts, newest on top based on ID, placed the comment edit/reply buttons inside the comment box

--- a/social-media-angular-main/src/app/components/comment/comment.component.css
+++ b/social-media-angular-main/src/app/components/comment/comment.component.css
@@ -10,3 +10,21 @@
 #close-icon:hover {
   cursor: pointer;
 }
+
+#optionButtons {
+  display: flex;
+  flex-direction: row;
+  min-width: 100%;
+  justify-content: end;
+}
+
+#comment-reply-text p{
+  margin: 0 10;
+  text-decoration: underline;
+}
+
+#edit-reply-text p{
+  padding-left: 10px;
+  color:red;
+  text-decoration:underline;
+}
